force-app/main/default/objects/CLQ_Child_Record__c/CLQ_Child_Record__c.object-meta.xml
<CustomObject>
    <description>Overview of the children enrolled in the Program.</description>
    <label>Child Record</label>
    <nameField>
        <label>Child Identifier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Child Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>