force-app/main/default/objects/CLQ_Child_Record__c/fields/CLQ_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Additional_Comments__c</fullName>
    <label>Additional Comments</label>
    <type>TextArea</type>
</CustomField>