force-app/main/default/objects/CLQ_Child_Record__c/fields/CLQ_Case__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Child Records</relationshipLabel>
    <relationshipName>Child_Records</relationshipName>
    <type>Lookup</type>
</CustomField>