force-app/main/default/objects/CLQ_Child_Record__c/fields/CLQ_Child_DOB__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Child_DOB__c</fullName>
    <formula>CLQ_Contact__r.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child DOB</label>
    <type>Date</type>
</CustomField>