force-app/main/default/objects/CLQ_Child_Record__c/fields/CLQ_Contact__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Child Records</relationshipLabel>
    <relationshipName>Child_Records</relationshipName>
    <type>Lookup</type>
</CustomField>