force-app/main/default/objects/CLQ_Child_Record__c/fields/CLQ_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Enrollment__c</fullName>
    <description>Select all the options that are applicable.</description>
    <inlineHelpText>Select all the options that are applicable.</inlineHelpText>
    <label>Enrollment (JFS 01234)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Falsified</fullName>
            </value>
            <value>
                <fullName>No Enrollment Form</fullName>
            </value>
            <value>
                <fullName>Parent Information Incomplete</fullName>
            </value>
            <value>
                <fullName>Parent List Info Incomplete</fullName>
            </value>
            <value>
                <fullName>Emergency Contact Incomplete</fullName>
            </value>
            <value>
                <fullName>Physician Information Incomplete</fullName>
            </value>
            <value>
                <fullName>Health Information Incomplete</fullName>
            </value>
            <value>
                <fullName>Additional Info – Box Checked Yes</fullName>
            </value>
            <value>
                <fullName>ETA Information Incomplete</fullName>
            </value>
            <value>
                <fullName>Diapering Information Incomplete</fullName>
            </value>
            <value>
                <fullName>Handbook Statement Incomplete</fullName>
            </value>
            <value>
                <fullName>Parent Signature Missing</fullName>
            </value>
            <value>
                <fullName>Administrator Signature Missing</fullName>
            </value>
            <value>
                <fullName>No Annual Update</fullName>
            </value>
            <value>
                <fullName>Not on Current JFS 01234</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>