force-app/main/default/objects/CLQ_Child_Record__c/fields/CLQ_Infant_Forms__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Infant_Forms__c</fullName>
    <label>Infant Forms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Infant Daily Form</fullName>
            </value>
            <value>
                <fullName>Daily Form Incomplete</fullName>
            </value>
            <value>
                <fullName>No Written Feeding Instructions</fullName>
            </value>
            <value>
                <fullName>Written Feeding Instructions Incomplete</fullName>
            </value>
            <value>
                <fullName>Written Feeding Instructions Not Updated</fullName>
            </value>
            <value>
                <fullName>No Sleep Waiver</fullName>
            </value>
            <value>
                <fullName>No Cot Permission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>