force-app/main/default/objects/CLQ_Child_Record__c/fields/CLQ_Medical_Physical_Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Medical_Physical_Care_Plan__c</fullName>
    <description>Select all the applicable options.</description>
    <inlineHelpText>Select all the applicable options.</inlineHelpText>
    <label>Medical/Physical Care Plan (JFS 01236)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Falsified</fullName>
            </value>
            <value>
                <fullName>No Plan on File</fullName>
            </value>
            <value>
                <fullName>Signatures Missing</fullName>
            </value>
            <value>
                <fullName>Plan Incomplete</fullName>
            </value>
            <value>
                <fullName>No Trained Staff</fullName>
            </value>
            <value>
                <fullName>Trained Staff Not Present</fullName>
            </value>
            <value>
                <fullName>No Separate Form Each Condition</fullName>
            </value>
            <value>
                <fullName>Plan Not Updated</fullName>
            </value>
            <value>
                <fullName>Non-Trained Staff Performed</fullName>
            </value>
            <value>
                <fullName>Not Implemented/Followed</fullName>
            </value>
            <value>
                <fullName>Plan Not Accessible</fullName>
            </value>
            <value>
                <fullName>Not on File One Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>