force-app/main/default/objects/CLQ_Child_Record__c/fields/CLQ_Medical_Statement__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Medical_Statement__c</fullName>
    <description>Select Multiple Options if applicable.</description>
    <inlineHelpText>Select Multiple Options if applicable.</inlineHelpText>
    <label>Child Medical Statement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Falsified</fullName>
            </value>
            <value>
                <fullName>No Medical</fullName>
            </value>
            <value>
                <fullName>Medical Expired</fullName>
            </value>
            <value>
                <fullName>Child Name/DOB Missing</fullName>
            </value>
            <value>
                <fullName>Date of Exam Missing</fullName>
            </value>
            <value>
                <fullName>Doctor Signature Missing</fullName>
            </value>
            <value>
                <fullName>Doctor Info Missing</fullName>
            </value>
            <value>
                <fullName>Doctor Does Not Meet</fullName>
            </value>
            <value>
                <fullName>No Immunization Record</fullName>
            </value>
            <value>
                <fullName>No Immunization Waiver</fullName>
            </value>
            <value>
                <fullName>Suitable for Group Care Missing</fullName>
            </value>
            <value>
                <fullName>Pending Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>