force-app/main/default/objects/CLQ_Child_Record__c/fields/CLQ_Medication__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Medication__c</fullName>
    <description>Select all the applicable options.</description>
    <inlineHelpText>Select all the applicable options.</inlineHelpText>
    <label>Medication (JFS 01217)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Falsified</fullName>
            </value>
            <value>
                <fullName>No Medication Form</fullName>
            </value>
            <value>
                <fullName>No Separate Form Each Med</fullName>
            </value>
            <value>
                <fullName>Not Current Version JFS 01217</fullName>
            </value>
            <value>
                <fullName>Medication Form Expired</fullName>
            </value>
            <value>
                <fullName>Medication Form Incomplete</fullName>
            </value>
            <value>
                <fullName>Instructions Not Followed</fullName>
            </value>
            <value>
                <fullName>Medication Expired</fullName>
            </value>
            <value>
                <fullName>No Rx Label/No Box 2</fullName>
            </value>
            <value>
                <fullName>Rx Label Incorrect/Expired</fullName>
            </value>
            <value>
                <fullName>Sample Rx No Instructions</fullName>
            </value>
            <value>
                <fullName>Non Rx Underage</fullName>
            </value>
            <value>
                <fullName>Medication Not Labeled</fullName>
            </value>
            <value>
                <fullName>Not Original Container</fullName>
            </value>
            <value>
                <fullName>Wrong Medication Administered</fullName>
            </value>
            <value>
                <fullName>Wrong Dose Administered</fullName>
            </value>
            <value>
                <fullName>No Prior Dose</fullName>
            </value>
            <value>
                <fullName>Administered Longer than Permitted</fullName>
            </value>
            <value>
                <fullName>Modified Diet No Written Approval</fullName>
            </value>
            <value>
                <fullName>Medical Foods/Supplements</fullName>
            </value>
            <value>
                <fullName>Not on File One Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>