force-app/main/default/objects/CLQ_Child_Record__c/fields/CLQ_Permission_Slips__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Permission_Slips__c</fullName>
    <description>Select all the applicable options.</description>
    <inlineHelpText>Select all the applicable options.</inlineHelpText>
    <label>Routine Swim/Fieldtrip</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Falsified</fullName>
            </value>
            <value>
                <fullName>Routine Form Incomplete</fullName>
            </value>
            <value>
                <fullName>Swimming Form Incomplete</fullName>
            </value>
            <value>
                <fullName>Field Trip Form Incomplete</fullName>
            </value>
            <value>
                <fullName>No Routine Permission</fullName>
            </value>
            <value>
                <fullName>No Field Trip Permission</fullName>
            </value>
            <value>
                <fullName>No Swimming Permission</fullName>
            </value>
            <value>
                <fullName>Routine Form Not Updated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>