force-app/main/default/objects/CLQ_Child_Record__c/fields/CLQ_Program__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>CLQ_Program__c</referenceTo>
    <relationshipLabel>Child Records</relationshipLabel>
    <relationshipName>Child_Records</relationshipName>
    <type>Lookup</type>
</CustomField>