force-app/main/default/objects/CLQ_Child_Record__c/fields/CLQ_Transition_Forms__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Transition_Forms__c</fullName>
    <label>Transition Forms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No transition form</fullName>
            </value>
            <value>
                <fullName>Transition form incomplete</fullName>
            </value>
            <value>
                <fullName>Transition form not signed by parent</fullName>
            </value>
            <value>
                <fullName>Transition form not available in the classrooms</fullName>
            </value>
            <value>
                <fullName>Falsified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>